test/sema/disallow-moving-class-with-deinitializer.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

class C {
    deinit() { }
}

func f(c: C) {
    // CHECK: [[@LINE+1]]:16: error: move semantics not yet implemented for classes with deinitializers
    let b: C = c
}
